# MyAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/cli/: __init__.py  main.py
apps/desktop/: __init__.py  main.py
configs/: default.yaml  execution_local.yaml  execution_ssh.yaml  llm_profiles.yaml  safety.yaml
configs/tasks/: activation_function.yaml  loss_function.yaml  my_test.yaml  optimizer_ablation.yaml
research_agent/: __init__.py
research_agent/agents/: analyzer_agent.py  base.py  coder_agent.py  planner_agent.py  reporter_agent.py  reviewer_agent.py
research_agent/core/: __init__.py  config.py  errors.py  events.py  logger.py  schemas.py  state.py
research_agent/executors/: base.py  local_executor.py
research_agent/experiments/: artifact_manager.py  comparator.py  manager.py  parser.py  runner.py
research_agent/llm/: base.py  openai_compatible.py  router.py
research_agent/safety/: budget.py  command_filter.py  path_guard.py  permission.py
research_agent/tools/: file_tools.py  git_tools.py  log_tools.py  metric_tools.py  plot_tools.py  registry.py  shell_tools.py
research_agent/workflows/: research_loop.py
research_agent_codex_prompts/: 01_stage_core_cli_local.txt  02_stage_ssh_execution.txt  03_stage_storage_checkpoint_artifacts.txt  04_stage_desktop_app_mvp.txt  05_stage_desktop_app_polish_packaging.txt
scripts/: run_cli.ps1  run_cli.sh  run_tests.ps1  run_tests.sh  setup_env.ps1  setup_env.sh
tests/: test_local_executor.py  test_router.py  test_safety.py  test_workflow.py
(+5 files in other folders)
