[project]
name = "research-agent"
version = "0.1.0"
description = "Local-first research automation agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "python-dotenv>=1",
  "openai>=1",
  "typer>=0.12",
  "rich>=13",
  "pytest>=8",
  "pandas>=2",
  "matplotlib>=3",
]

[project.scripts]
research-agent = "apps.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"