[project]
name = "research-agent"
version = "0.1.0"
description = "Local-first research automation agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "python-dotenv>=1",
  "openai>=1",
  "typer>=0.12",
  "rich>=13",
  "pytest>=8",
  "pandas>=2",
  "matplotlib>=3",
]

[project.scripts]
research-agent = "apps.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_agent*", "apps*"]
exclude = ["configs*", "workspace*", "research_agent_codex_prompts*", "scripts*", "tests*"]

[tool.setuptools.package-data]
"research_agent.llm" = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
